--- a/index.html
+++ b/index.html
@@ -8,5 +8,18 @@
 </head>
 <body>
 	<!-- <h1 class='text-red-500 md:text-blue-600 lg:text-green-700'>ed,e;d,e;d,</h1> -->
+	 <header  class='bg-[#673A44] h-[40px] '>
+		<div class=' flex justify-around h-[40px] items-center md:w-[90%] justify-between m-auto'>
+		<div class='flex gap-[10px] md:gap-[40px] lg:gap-[80px] '>
+<p class='text-[14px] text-[white]'>Кабинет метролога</p>
+<p class='text-[14px] text-[white]'>Цены</p>
+<p class='text-[14px] text-[white]'>Попробовать</p>
+</div>
+<div class='flex gap-[5px]'>
+	<img src="./img/login 1.png" alt="">
+<p class='text-[14px] text-[white]'>Войти</p>
+</div>
+</div>
+	 </header>
 </body>
 </html>
