--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<!-- <h1 class='text-red-500 md:text-blue-600 lg:text-green-700'>ed,e;d,e;d,</h1> -->
-	 <header  class='bg-[#673A44] h-[40px] '>
+	 <header  class='bg-[#673A44] h-[40px] px-[15px]'>
 		<div class=' flex justify-around h-[40px] items-center md:w-[90%] justify-between m-auto'>
 		<div class='flex gap-[10px] md:gap-[40px] lg:gap-[80px] '>
 <p class='text-[14px] text-[white]'>Кабинет метролога</p>
@@ -21,5 +21,22 @@
 </div>
 </div>
 	 </header>
+	 <main>
+		<section class='mt-[20px] ml-[30px] lg:ml-[50px] '>
+			<img src="./img/image 1.png" alt="">
+		</section>
+		<section class='flex flex-col items-center text-center  md:flex-row-reverse justify-center text-start px-[20px]'>
+			<div>
+				<img class='w-[274px] md:w-[382px] lg:600px ' src="./img/Frame (21).png" alt="">
+			</div>
+			<div class='flex flex-col gap-[15px] mt-[20px] items-center text-center md:text-start items-start'>
+				<p class='text-[36px] md:text-[70px] w-[430px]'>Кабинет метролога</p>
+				<p class='text-[14px] w-[374px] md:text-[21px]'>Онлайн-сервис для сопровождения деятельности метрологических лабораторий</p>
+				<button class='text-[16px] bg-[#6A3B45] w-[307px] h-[60px] text-[white] rounded-[10px] m-auto md:m-0 lg:m-0'>
+					Попробовать бесплатно
+				</button>
+			</div>
+		</section>
+	 </main>
 </body>
 </html>
