--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<section class='mt-[20px] ml-[30px] lg:ml-[50px] '>
 			<img src="./img/image 1.png" alt="">
 		</section>
-		<section class='flex flex-col items-center text-center  md:flex-row-reverse justify-center text-start px-[20px]'>
+		<section class='flex flex-col items-center text-center  px-0 md:flex-row-reverse justify-center text-start px-[20px]'>
 			<div>
 				<img class='w-[274px] md:w-[382px] lg:600px ' src="./img/Frame (21).png" alt="">
 			</div>
@@ -36,6 +36,27 @@
 					Попробовать бесплатно
 				</button>
 			</div>
+		</section>
+		<section class='flex flex-col items-center md:flex-row items-center justify-around'>
+<div class='bg-[#F2F2F2] w-[340px] p-[22px] rounded-[10px] flex items-center mt-[40px] md:p-[40px] md:w-[330px] items-start h-[200px] lg:w-[497px] h-[200px items-start'>
+	<div >
+	<p class='text-[21px]'>Главному метрологу</p>
+	<p class='text-[14px] text-[grey] w-[222px]'>Легко заводить первичку, работать с бухгалтером или вести учет самому</p>
+</div>
+<div>
+	<img src="./img/Group 1.png" alt="">
+</div>
+</div>
+<div class='bg-[#F2F2F2] w-[340px] p-[22px] rounded-[10px] flex items-center mt-[40px] md:p-[40px] md:w-[330px] h-[200px] items-start lg:w-[497px] h-[200px]'>
+	<div >
+	<p class='text-[21px]'>Метрологической</p>
+	<p class='text-[14px] text-[grey] w-[222px]'>Легко заводить первичку, работать с бухгалтером или вести учет самому</p>
+</div>
+<div>
+	<img src="./img/Group 1.png" alt="">
+</div>
+</div>
+
 		</section>
 	 </main>
 </body>
