--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<!-- <h1 class='text-red-500 md:text-blue-600 lg:text-green-700'>ed,e;d,e;d,</h1> -->
-	 <header  class='bg-[#673A44] h-[40px] px-[15px]'>
-		<div class=' flex justify-around h-[40px] items-center md:w-[90%] justify-between m-auto'>
+	 <header  class='bg-[#673A44] h-[40px] px-[15px] md:p-0 lg:p-0 '>
+		<div class=' flex justify-around h-[40px] items-center md:w-[90%] justify-between m-auto max-w-[1126px] !mx-auto'>
 		<div class='flex gap-[10px] md:gap-[40px] lg:gap-[80px] '>
 <p class='text-[14px] text-[white]'>Кабинет метролога</p>
 <p class='text-[14px] text-[white]'>Цены</p>
@@ -21,7 +21,7 @@
 </div>
 </div>
 	 </header>
-	 <main>
+	 <main class='max-w-[1126px] !mx-auto'>
 		<section class='mt-[20px] ml-[30px] lg:ml-[50px] '>
 			<img src="./img/image 1.png" alt="">
 		</section>
@@ -38,7 +38,7 @@
 			</div>
 		</section>
 		<section class='flex flex-col items-center md:flex-row items-center justify-around'>
-<div class='bg-[#F2F2F2] w-[340px] p-[22px] rounded-[10px] flex items-center mt-[40px] md:p-[40px] md:w-[330px] items-start h-[200px] lg:w-[497px] h-[200px items-start'>
+<div class='bg-[#F2F2F2] w-[340px] p-[22px] rounded-[10px] flex items-center mt-[40px] md:p-[40px] md:w-[330px] items-start h-[200px] lg:w-[497px] h-[200px items-start '>
 	<div >
 	<p class='text-[21px]'>Главному метрологу</p>
 	<p class='text-[14px] text-[grey] w-[222px]'>Легко заводить первичку, работать с бухгалтером или вести учет самому</p>
@@ -47,7 +47,7 @@
 	<img src="./img/Group 1.png" alt="">
 </div>
 </div>
-<div class='bg-[#F2F2F2] w-[340px] p-[22px] rounded-[10px] flex items-center mt-[40px] md:p-[40px] md:w-[330px] h-[200px] items-start lg:w-[497px] h-[200px]'>
+<div class='bg-[#F2F2F2] w-[340px] p-[22px] rounded-[10px] flex items-center mt-[40px] md:p-[40px] md:w-[330px] h-[200px] items-start lg:w-[467px] h-[200px]'>
 	<div >
 	<p class='text-[21px]'>Метрологической</p>
 	<p class='text-[14px] text-[grey] w-[222px]'>Легко заводить первичку, работать с бухгалтером или вести учет самому</p>
@@ -56,7 +56,59 @@
 	<img src="./img/Group 1.png" alt="">
 </div>
 </div>
+		</section>
+		<section class='mt-[60px]'>
+			<p class='text-[26px] text-[#25090F] w-[306px] text-center m-auto md:text-[40px] md:w-[600px] lg:w-[900px] lg:text-[60px]'>Простой дружелюбный сервис</p>
+			<div class='flex flex-col mt-[40px] items-center md:flex md:flex-col md:items-center lg:flex-row gap-[20px]'>
 
+<div class='bg-[#F2F2F2] rounded-[5px] mt-[20px] w-[360px] p-[30px] flex flex-col gap-[10px] items-start md:flex-row md:w-[710px] md:justify-center md:items-center md:!gap-[41px] lg:w-[320px] lg:flex-col lg:items-start lg:p-[20px]'>
+
+	<img src="img/online-test 1.png" alt="">
+
+	<div>
+	<p class='text-[22px] md:text-[24px] lg:text-[40px] w-[302px]'>Работает онлайн</p>
+	<p class='text-[#575757] text-[14px] w-[280px]  md:w-[505px] text-[16px] lg:w-[302px] text-[24px]'>Веб-сервис работает везде, где есть интернет. Обновляется бесплатно, автоматически</p>
+	</div>
+</div>
+<div class='bg-[#F2F2F2] rounded-[5px] mt-[20px] w-[360px] p-[30px] flex flex-col gap-[10px] items-start md:flex-row md:w-[710px] md:justify-center md:items-center md:!gap-[41px] lg:w-[320px] lg:flex-col lg:items-start lg:p-[20px]'>
+
+	<img src="img/online-test 1.png" alt="">
+
+	<div>
+	<p class='text-[22px] md:text-[24px] lg:text-[40px] w-[302px]'>Работает онлайн</p>
+	<p class='text-[#575757] text-[14px] w-[280px]  md:w-[505px] text-[16px] lg:w-[302px] text-[24px]'>Веб-сервис работает везде, где есть интернет. Обновляется бесплатно, автоматически</p>
+	</div>
+</div>
+<div class='bg-[#F2F2F2] rounded-[5px] mt-[20px] w-[360px] p-[30px] flex flex-col gap-[10px] items-start md:flex-row md:w-[710px] md:justify-center md:items-center md:!gap-[41px] lg:w-[320px] lg:flex-col lg:items-start lg:p-[20px]'>
+
+	<img src="img/online-test 1.png" alt="">
+
+	<div>
+	<p class='text-[22px] md:text-[24px] lg:text-[40px] w-[302px]'>Работает онлайн</p>
+	<p class='text-[#575757] text-[14px] w-[280px]  md:w-[505px] text-[16px] lg:w-[302px] text-[24px]'>Веб-сервис работает везде, где есть интернет. Обновляется бесплатно, автоматически</p>
+	</div>
+</div>
+<!-- <div class='bg-[#F2F2F2] w-[360px] flex-col i p-[30px] rounded-[10px] mt-[30px] md:w-[690px] md:w-[690px] flex gap-[30px] '>
+	<div>
+	<img src="img/online-test 1.png" alt="">
+</div>
+	<div>
+	<p class='text-[22px] '>Работает онлайн</p>
+	<p class='text-[#575757] text-[14px] w-[280px]'>Веб-сервис работает везде, где есть интернет. Обновляется бесплатно, автоматически</p>
+	</div>
+</div>
+<div class='bg-[#F2F2F2] flex flex-col w-[360px] p-[30px] rounded-[10px] mt-[30px]  md:w-[690px] md:w-[690px] flex gap-[30px] '>
+	<div>
+	<img src="img/online-test 1.png" alt="">
+</div>
+	<div>
+	<p class='text-[22px] '>Работает онлайн</p>
+	<p class='text-[#575757] text-[14px] w-[280px]'>Веб-сервис работает везде, где есть интернет. Обновляется бесплатно, автоматически</p>
+	</div>
+</div> -->
+
+
+			</div>
 		</section>
 	 </main>
 </body>
