--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			</div>
 			<img class='w-[346px] h-[263px] md:w-[580px] md:h-[441px] lg:w-[580px] lg:h-[441px]' src="./img/Frame 955.png" alt="">
 		</section>
-		<section class='flex flex-col mt-[100px] gap-[40px] md:flex md:flex-col md:gap-[40px] lg:flex-row flex-wrap lg:justify-center '>
+		<section class='flex flex-col items-center mt-[100px] gap-[40px] md:flex md:flex-col md:gap-[40px] lg:flex-row flex-wrap lg:justify-center '>
 			<div class='w-[346px] flex flex-col items-start gap-[10px] md:flex-row md:w-[600px] md:m-auto md:gap-[40px] md:items-center lg:m-0 lg:w-[430px]'>
 				
 				<img src="./img/approve (1) 1.png" alt="">
@@ -152,6 +152,35 @@
 				<p class='text-[26px] text-[#000000] font-semibold'>Учет оборудования</p>
 				<p class='text-[#575757]'>Просто загрузите скан в сервис, данные заполнятся в форму автоматически</p>
 				</div>
+			</div>
+		</section>
+		<section class='flex flex-col px-[30px] mt-[100px] items-center text-center    lg:flex-row-reverse lg:items-center lg:gap-[32px]'>
+			<div class='flex flex-col gap-[15px] mt-[20px] items-start  md:text-start items-start'>
+				<p class='text-[36px] md:text-[40px] md:w-[640px] lg:w-[657px] lg:text-[60px]'>Контролируйте сроки регламентных работ</p>
+				<p class='text-[14px] text-[#575757] w-[374px] md:text-[18px] md:w-[697px] lg:text-[24px] lg:w-[657px]'>Сервис автоматически рассчитывает зарплату, больничные, отпускные, декретные, алименты и прочее. Также есть расчёты с налоговой, учёт дивидендов, доходов от аренды, выплат по договорам подряда, подарков и призов.</p>
+				
+			</div>
+			<div>
+				<img class='w-[274px] md:w-[382px] lg:600px ' src="./img/Frame (23).png" alt="">
+			</div>
+		</section>
+		<section>
+			<p class='text-[26px] text-center font-semibold md:text-[40px] lg:text-[58px]'>Синхронизация данных с ФГИС «Аршин»</p>
+			<div class='flex flex-wrap justify-center gap-[20px] mt-[30px] lg:gap-[80px]'>
+
+<div class='bg-[#F2F2F2] w-[170px] p-[40px] rounded-[40px]'>
+	<img class='ml-[20px]' src="./img/exam (2) 1.png" alt="">
+	<p class='text-[16px] w-[118px] ml-[30px] mt-[20px] font-semibold'>ГЭТ</p>
+</div>
+<div class='bg-[#F2F2F2] w-[170px] p-[40px] rounded-[40px]'>
+	<img class='ml-[20px]' src="./img/exam (2) 1.png" alt="">
+	<p class='text-[16px] w-[118px] ml-[30px] mt-[20px] font-semibold'>ГЭТ</p>
+</div>
+<div class='bg-[#F2F2F2] w-[170px] p-[40px] rounded-[40px]'>
+	<img class='ml-[20px]' src="./img/exam (2) 1.png" alt="">
+	<p class='text-[16px] mt-[20px] ml-[20px] w-[118px] font-semibold'>ГРСИ</p>
+</div>
+
 			</div>
 		</section>
 	 </main>
