--- a/index.html
+++ b/index.html
@@ -183,6 +183,29 @@
 
 			</div>
 		</section>
+		
+		<section class='flex flex-col items-center '>
+			<div>
+			<img class='w-[346px] h-[241px] md:w-[690px] md:h-[421px] lg:w-[800px]
+			lg:h-[700px]' src="./img/Frame 964.png" alt="">
+			</div>
+			<div class='flex px-[10px] flex-col lg:flex-row-reverse gap-[40px] lg:items-center'>
+			<div>
+
+            <div class='w-[346px] md:w-[697px]'>
+				<p class='text-[26px] text-[#25090F] font-semibold md:text-[40px] lg:text-[60px]'>Работайте вместе с коллегами</p>
+				<p class='text-[14px] text-[#575757] md:text-[24px] '>В сервисе могут работать неограниченное количество сотрудников бесплатно, каждому доступны свои роли и функции. Директор и менеджеры выставляют счёт и заводят первичку, а вы выполняете свою часть работы. Ставьте задачи коллегам, общайтесь через чат сервиса.</p>
+			</div>
+			  <div class='w-[346px] md:w-[697px] mt-[40px]'>
+				<p class='text-[26px] text-[#25090F] font-semibold md:text-[40px] lg:text-[50px]'>Подключите открытый API</p>
+				<p class='text-[14px] text-[#575757] md:text-[24px]'>Настройте обмен данными между Бухгалтерией и другими сервисами, в которых работают сотрудники вашей компании.</p>
+			</div>
+			</div>
+			<div class='flex flex-col items-center'>
+				<img class='w-[335px] h-[297px] md:w-[547px] md:h-[521px] lg:w-[500px] lg:h-[480px]' src="./img/Frame (24).png" alt="">
+			</div>
+			</div>
+		</section>
 	 </main>
 </body>
 </html>
